--- a/style.css
+++ b/style.css
@@ -2,7 +2,7 @@
 
 body {
     font-face: Helvetica, sans-serif;
-    font-size: 0.8em;
+    font-size: 16px;
     padding: 40px 0;
     max-width: 800px;
     margin: 0px auto;
@@ -73,11 +73,11 @@ a:visited {
     letter-spacing: 0.3px;
 }
 
-.section {
+.content {
     margin: 1em 8px;
 }
 
-.section > h3:first-child{
+.content > h3:first-child{
     margin-top: 0px;
 }
 
