--- a/style.css
+++ b/style.css
@@ -15,7 +15,7 @@
 body {
   font-family: 'Helvetica Neue', Helvetica, Arial, sans-serif;
   font-size: 16px;
-  line-height: 1.5em;
+  line-height: 1.4em;
 
   color: #2c3e50;
 }
@@ -105,6 +105,10 @@ article section:last-of-type p:last-of-type {
 ul {
   margin: 0;
   padding-left: 1.25em;
+}
+
+ul li {
+  margin-bottom: 1rem;
 }
 
 .columns {
